# invoiceOCR

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/config/: config.yaml
src/logging/: log_config.yaml  logger.py
src/scripts/: train.py
